[gd_scene load_steps=2 format=3 uid="uid://jejvfbw65n0x"]

[ext_resource type="Script" path="res://menus/character_menu.gd" id="1_tcw72"]

[node name="CharacterMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.321569, 0.258824, 1, 1)
script = ExtResource("1_tcw72")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 148.0
grow_horizontal = 2
alignment = 1

[node name="CharacterOneButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Char 1"

[node name="CharacterTwoButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "Char 2"

[node name="CharacterThreeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "Char 3"

[node name="CharacterThreeButton2" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "Char 4"

[connection signal="pressed" from="HBoxContainer/CharacterOneButton" to="." method="_on_character_one_button_pressed"]
